Integrated dash and flask

--- a/templates/Home.html
+++ b/templates/Home.html
@@ -2,17 +2,23 @@
 {% block title %}Homepage{% endblock %} 
 {% block body %} 
     <div class="row row-cols-1 row-cols-md-2">
-        {% for i in range(0,value|length) %}
-        <div class="col mb-4">
-            <div class="card" style="width: 18rem">
-                <img class="card-img-top" src="{{images[i]}}" alt="{{value[i]}}">
-                    <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">{{value[i]}}</p>
-                    <a href="{{url_for('driver',name=value[i])}}" class="btn btn-primary">Go somewhere</a>
+        {% for driver in value %}
+            {% for img in images %}
+                {% if driver.split()[0] in img %}
+                <div class="col mb-4">
+                    <div class="card" style="width: 18rem">
+                        <img class="card-img-top" src="{{img}}" alt="{{driver}}">
+                            <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">{{driver}}</p>
+                            <a href="{{url_for('driver',name=driver)}}" class="btn btn-primary">Go somewhere</a>
+                            </div>
                     </div>
-            </div>
-        </div>
+                </div>
+                {% endif %}
+            {% endfor %}
         {% endfor %} 
-        </div>
+    </div>
+    
+
 {% endblock %} 
