--- a/templates/driver.html
+++ b/templates/driver.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} 
 {% block title %}{{driver}}{% endblock %} 
 {% block body %}
-<p>hello world</p>
+<p>Currently underconstruction. Please use the compare drivers link</p>
 {% endblock %} 
